# hp-dev-tutorial

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
src/hypermodern_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_console.py
